--- a/secciones/tips-de-hacer-mates.html
+++ b/secciones/tips-de-hacer-mates.html
@@ -5,40 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Varela+Round&display=swap');
-    </style>
+      @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+      </style>
     <title>Mateolis</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <section class="titulo">
-                <h1><a href="../index.html" class="link-titulo"> <b> MATEOLIS </b></h1></a>
-                
+        <section class="inicio-titulo">
+            <nav class="navbar navbar-expand-lg navbar-light bg-info">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="../index.html"> <b> Mateolis</b></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse  nav" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"  href="../index.html"  ><button type="button" class="btn btn-primary">inicio</button></a>
+                        
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="productos.html"><button type="button" class="btn btn-primary">Productos</button></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="quienes-somos.html"><button type="button" class="btn btn-primary">Quienes somos</button></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="contacto.html"><button type="button" class="btn btn-primary">Contacto</button></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="tips-de-hacer-mates.html"><button type="button" class="btn btn-primary">Tips para hacen un buen mate</button></a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
             </section>
-            <ul>
-                <li> <a href="../index.html"><b> INICIO </b></a>
-                    <img src="https://img.icons8.com/ios/25/000000/home-page.png" /></li>
-
-                <li><a href="productos.html"><b>PRODUCTOS </b></a>
-                    <img src="https://img.icons8.com/ios/25/000000/shopping-cart-loaded--v2.png" /></li>
-
-                <li><a href="quienes-somos.html"><b>QUIENES SOMOS </b></a>
-                    <img src="https://img.icons8.com/material/24/000000/group-background-selected.png" /></li>
-
-                <li><a href="contacto.html"><b>CONTACTO </b></a>
-                    <img src="https://img.icons8.com/ios/25/000000/message-squared.png" /></li>
-
-                <li> <a href="tips-de-hacer-mates.html"><b>TIPS PARA HACER UN BUEN MATE </b></a> <img
-                        src="https://img.icons8.com/external-basicons-solid-edtgraphics/25/000000/external-bombilla-kitchen-basicons-solid-edtgraphics.png" />
-                </li>
-
-            </ul>
-        </nav>
     </header>
 
     <section class="fondo-tips">
@@ -86,7 +93,7 @@
         </section>
     </section>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 
