--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/estilos.css">
+    <link rel="stylesheet" href="../estilos/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
@@ -50,43 +50,44 @@
 
 
     <section class="productos-titulo">
-        <h2>Los mejores productos de ARGENTINA</h2>
-    </section>
+        <h2>LOS MEJORES PRODUCTOS DE ARGENTINA</h2>
+    
 
     <section class="productos-titulo-2">
         <h3 class="productos-comprar">Mates</h3>
         <figure>
             <img src="../productos/mates-1.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1">COMPRAR</a>
+            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
 
             <img src="../productos/mates-2.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1">COMPRAR</a>
+            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
 
 
             <h3 class="productos-comprar">Bombillas</h3>
             <img src="../productos/bombilla-1.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1">COMPRAR</a>
+            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
 
             <img src="../productos/bombilla-2.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1">COMPRAR</a>
+            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
 
 
             <h3 class="productos-comprar">Kit de mates</h3>
             <img src="../productos/kit-de-mate-1.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1">COMPRAR</a>
+            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
 
             <img src="../productos/kit-de-mate-2.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1">COMPRAR</a>
+            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
 
             <h3 class="productos-comprar">Termos </h3>
             <img src="../productos/termo-1.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1">COMPRAR</a>
+            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
 
             <img src="../productos/termo-2.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1">COMPRAR</a>
+            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
 
         </figure>
     </section>
+  </section>
 
     <footer>
 
