--- a/secciones/tips-de-hacer-mates.html
+++ b/secciones/tips-de-hacer-mates.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/estilos.css">
+    <link rel="stylesheet" href="../estilos/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-      </style>
+        @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+        </style>
     <title>Mateolis</title>
 </head>
 
@@ -50,7 +50,7 @@
 
     <section class="fondo-tips">
     <section class="tips-titulo">
-        <h2>los mejores tips para hacer un buen mate!!</h2>
+        <h2>Los mejores tips para hacer un buen mate!!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nulla expedita, atque veritatis pariatur fuga
             minus fugit nihil deleniti, a magnam dicta ducimus fugiat debitis, ullam modi dignissimos corporis. Ipsam!
         </p>
