--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -50,43 +50,65 @@
 
 
 
-    <section>
+    <section class="inicio-contacto">
         <h2 class="titulo-contacto"> Contáctanos </h2>
 
-        <div class="img-contacto">
-            <img src="../img/contactanos.jpg" alt="">
+        <form>
+          <div class="row mb-3">
+            <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre y Apellido </label>
+            <div class="col-sm-10">
+              <input type="name" class="form-control" id="inputName3">
+            </div>
+          </div>
+          <div class="row mb-3">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Email o Gmail</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="inputEmail3">
+            </div>
+          </div>
+          <div class="row mb-3">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Numero de telefono</label>
+            <div class="col-sm-10">
+              <input type="name" class="form-control" id="inputName3">
+            </div>
+          </div>
+          <fieldset class="row mb-3">
+            <legend class="col-form-label col-sm-2 pt-0">Por que medio nos vas a contactar? </legend>
+            <div class="col-sm-10">
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                <label class="form-check-label" for="gridRadios1">
+                  Instagram
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                <label class="form-check-label" for="gridRadios2">
+                  Facebook
+                </label>
+              </div>
+              <div class="form-check ">
+                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" >
+                <label class="form-check-label" for="gridRadios3">
+                 Whatsapp
+                </label>
+              </div>
+            </div>
+          </fieldset>
+          <div class="row mb-3">
+            <div class="col-sm-10 offset-sm-2">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck1">
+                <label class="form-check-label" for="gridCheck1">
+                  Seguro?
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="boton-contacto">
+          <button type="submit"  class="btn btn-primary">Enviar </button>
         </div>
-
-
-        <form action="#">
-
-            <div class="texto-contacto">
-                <label for="text">Nombre y Apellido:
-                    <input type="text" placeholder=" ingrese su Nombre">
-                </label>
-
-                <label for="email"> Email o Gmail:
-                    <input type="email" placeholder="aaa@gmail.com" name="email">
-                </label>
-
-                <label for="telefono">Numero de telefono
-                    <input type="numero" placeholder="Telefono" name="numero">
-                </label>
-
-                <label for="colsultas"> Colsultas:
-                    <textarea placeholder="colsultas"></textarea>
-                </label>
-            </div>
-
-            <div class="enviar">
-                <input type="submit" value="Enviar">
-                <input type="reset" value="Resetear">
-            </div>
-
         </form>
-
-
-       
     </section>
 
     <footer>
