agregado de sass 2.0

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           
 
                 <h3 class="productos-inicio">COMO PREPARAR UN BUEN MATE</h3>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/vwrmTSMmcaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen class="inicio-video"></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/vwrmTSMmcaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen class="inicio"></iframe>
                 <a href="./secciones/tips-de-hacer-mates.html" class="comprar"><button type="button" class="btn btn-primary btn-sm">Ver mas</button></a>
          
             </div>
@@ -112,15 +112,15 @@
             <h4>Nuestras redes sociales</h4>
             <div>
                 <a href="https://www.instagram.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt=""/>
+                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt=""/>
                 </a>
 
                 <a href="https://www.facebook.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="" />
+                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="" />
                 </a>
 
                 <a href="https://web.whatsapp.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="" />
+                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="" />
 
                 </a>
 
