--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -2,117 +2,198 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-      </style>
-    <title>Mateolis</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="../estilos/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+  </style>
+  <title>Mateolis</title>
 </head>
 
 <body>
-    <header>
-        <section class="inicio-titulo">
-            <nav class="navbar navbar-expand-lg navbar-light bg-info">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="../index.html"> <b> Mateolis </b></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse  nav" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page"  href="../index.html"  ><button type="button" class="btn btn-primary">inicio</button></a>
-                        
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="productos.html"><button type="button" class="btn btn-primary">Productos</button></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="quienes-somos.html"><button type="button" class="btn btn-primary">Quienes somos</button></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="contacto.html"><button type="button" class="btn btn-primary">Contacto</button></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="tips-de-hacer-mates.html"><button type="button" class="btn btn-primary">Tips para hacen un buen mate</button></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-            </section>
-    </header>
+  <header>
+    <section class="inicio-titulo">
+      <nav class="navbar navbar-expand-lg navbar-light bg-info">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html"> <b> Mateolis </b></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse  nav" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html"><button type="button"
+                    class="btn btn-primary">inicio</button></a>
+
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="productos.html"><button type="button"
+                    class="btn btn-primary">Productos</button></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="quienes-somos.html"><button type="button"
+                    class="btn btn-primary">Quienes somos</button></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="contacto.html"><button type="button"
+                    class="btn btn-primary">Contacto</button></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="tips-de-hacer-mates.html"><button type="button"
+                    class="btn btn-primary">Tips para hacen un buen mate</button></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </section>
+  </header>
 
 
-    <section class="productos-titulo">
-        <h2>LOS MEJORES PRODUCTOS DE ARGENTINA</h2>
-    
+  <section class="productos-titulo">
+    <h2>LOS MEJORES PRODUCTOS DE ARGENTINA</h2>
+
 
     <section class="productos-titulo-2">
-        <h3 class="productos-comprar">Mates</h3>
-        <figure>
-            <img src="../productos/mates-1.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
 
-            <img src="../productos/mates-2.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
+      <h3 class="productos-comprar">MATES</h3>
+      <div class="card" style="width: 18rem;">
+        <img src="../img/mates-1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="https://articulo.mercadolibre.com.ar/MLA-882281562-mate-de-vidrio-forrado-eco-cuero-de-animales-_JM#position=6&search_layout=grid&type=item&tracking_id=6adb1b1c-cd42-481d-acad-daad472ccffc"
+            target="_blank" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="../img/mates-2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="https://articulo.mercadolibre.com.ar/MLA-1112221852-mate-uruguayo-torpedo-cuero-y-bombilla-pico-de-loro-_JM#position=51&search_layout=grid&type=item&tracking_id=716df2f5-af5b-488c-85ab-5057d2113b05"
+            target="_blank" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="../img/mates-3.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="https://articulo.mercadolibre.com.ar/MLA-880301865-mate-imperial-personalizado-boca-ancha-calabaza-gruesa-_JM#position=14&search_layout=grid&type=item&tracking_id=b26c371e-beeb-494b-8d1c-497dc2a3792d"
+            target="_blank" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
 
 
-            <h3 class="productos-comprar">Bombillas</h3>
-            <img src="../productos/bombilla-1.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
+      <h3 class="productos-comprar">BOMBILLAS</h3>
+      <div class="card" style="width: 18rem;">
+        <img src="../img/bombilla-1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="https://articulo.mercadolibre.com.ar/MLA-918235995-bombilla-mate-pico-de-loro-acero-inoxidable-cuchara-paleta-_JM#position=6&search_layout=grid&type=item&tracking_id=d0e0c442-aaa9-482d-8579-84ae8cbc9d04"
+            target="_blank" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
 
-            <img src="../productos/bombilla-2.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
+      <div class="card" style="width: 18rem;">
+        <img src="../img/bombilla-2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="https://articulo.mercadolibre.com.ar/MLA-929615358-bombilla-acero-inoxidable-pico-de-rey-_JM#position=48&search_layout=grid&type=item&tracking_id=d0e0c442-aaa9-482d-8579-84ae8cbc9d04"
+            target="_blank" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="../img/bombilla-3.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="https://articulo.mercadolibre.com.ar/MLA-1129823442-bombilla-para-mate-stanley-spoon-original-_JM#position=1&search_layout=grid&type=item&tracking_id=39712904-eb2d-4348-a734-7fdb0bc8149c"
+            target="_blank" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
 
 
-            <h3 class="productos-comprar">Kit de mates</h3>
-            <img src="../productos/kit-de-mate-1.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
+      <h3 class="productos-comprar">KIT DE MATES</h3>
+      <div class="card" style="width: 18rem;">
+        <img src="../img/kit-de-mate-1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="https://articulo.mercadolibre.com.ar/MLA-867693668-set-matero-kit-completo-equipo-mate-porta-termo-eco-cuero-_JM#position=2&search_layout=grid&type=item&tracking_id=d9e78cce-cc6e-4f00-a3df-c111b25b26cc"
+            target="_blank" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
 
-            <img src="../productos/kit-de-mate-2.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
+      <div class="card" style="width: 18rem;">
+        <img src="../img/kit-de-mate-2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="https://articulo.mercadolibre.com.ar/MLA-920512527-set-equipo-mate-completo-pampa-termo-acero-bolso-y-bombilla-_JM?variation=90161168302#reco_item_pos=0&reco_backend=machinalis-seller-items-pdp&reco_backend_type=low_level&reco_client=vip-seller_items-above&reco_id=59c77bd2-1dbf-42b7-96b8-a25e445aa57c"
+            target="_blank" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
 
-            <h3 class="productos-comprar">Termos </h3>
-            <img src="../productos/termo-1.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
+      <div class="card" style="width: 18rem;">
+        <img src="../img/kit-de-mate-3.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="https://articulo.mercadolibre.com.ar/MLA-1142881959-kit-matero-stanley-termo-de-13ltrs-mate-bolso-_JM#position=14&search_layout=grid&type=item&tracking_id=2eb8b2ad-ac50-45e6-8c17-37dc7dfeef8c"
+            target="_blank" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
 
-            <img src="../productos/termo-2.jpg" alt="" class="imagenes-productos">
-            <a href="" class="comprar-1"><button type="button" class="btn btn-primary btn-sm">COMPRAR</button></a>
+      <h3 class="productos-comprar">TERMOS </h3>
+      <div class="card" style="width: 18rem;">
+        <img src="../img/termo-1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="https://www.mercadolibre.com.ar/termo-waterdog-obus-de-acero-inoxidable-1l-black/p/MLA15508618?pdp_filters=category:MLA47769#searchVariation=MLA15508618&position=7&search_layout=stack&type=product&tracking_id=007fad4d-e1d1-4cca-8c81-a3e425ed2fd1"
+            target="_blank" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
 
-        </figure>
+      <div class="card" style="width: 18rem;">
+        <img src="../img/termo-2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="https://www.mercadolibre.com.ar/stanley-termo-clasico-14-lts-con-tapon-cebador-de-acero-inoxidable-verde/p/MLA15542577?pdp_filters=category:MLA47769#searchVariation=MLA15542577&position=12&search_layout=stack&type=product&tracking_id=007fad4d-e1d1-4cca-8c81-a3e425ed2fd1"
+            target="_blank" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="../img/termo-3.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="https://www.mercadolibre.com.ar/termo-termolar-r-evolution-rolha-dupla-de-acero-inoxidable-1l-acero/p/MLA9927395?pdp_filters=item_id:MLA1116304047#searchVariation=MLA9927395&position=8&search_layout=stack&type=pad&tracking_id=007fad4d-e1d1-4cca-8c81-a3e425ed2fd1"
+            target="_blank" class="btn btn-primary">Comprar</a>
+        </div>
+      </div>
+
+
     </section>
   </section>
 
-    <footer>
+  <footer>
 
-        <h4>Nuestras redes sociales</h4>
+    <h4>Nuestras redes sociales</h4>
 
-        <section class="iconos">
-            <div>
-                <a href="https://www.instagram.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt="" />
-                </a>
+    <section class="iconos">
+      <div>
+        <a href="https://www.instagram.com/">
+          <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt=""/>
+      </a>
 
-                <a href="https://www.facebook.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="" />
-                </a>
+      <a href="https://www.facebook.com/">
+          <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="" />
+      </a>
 
-                <a href="https://web.whatsapp.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="" />
+      <a href="https://web.whatsapp.com/">
+          <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="" />
 
-                </a>
+      </a>
 
 
-            </div>
-        </section>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      </div>
+    </section>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
 
 </body>
 
