--- a/secciones/tips-de-hacer-mates.html
+++ b/secciones/tips-de-hacer-mates.html
@@ -76,15 +76,15 @@
         <section>
             <div>
                 <a href="https://www.instagram.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt=""/>
+                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt=""/>
                 </a>
 
                 <a href="https://www.facebook.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt=""/>
+                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="" />
                 </a>
 
                 <a href="https://web.whatsapp.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt=""/>
+                    <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="" />
 
                 </a>
 
