--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -53,27 +53,27 @@
     <section class="inicio-contacto">
         <h2 class="titulo-contacto"> Contáctanos </h2>
 
-        <form>
+        <form class="formulario">
           <div class="row mb-3">
-            <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre y Apellido </label>
+            <label for="inputEmail3" class="col-sm-2 col-form-label"> <p class="formulario-nombre"> Nombre y Apellido </p></label>
             <div class="col-sm-10">
               <input type="name" class="form-control" id="inputName3">
             </div>
           </div>
           <div class="row mb-3">
-            <label for="inputPassword3" class="col-sm-2 col-form-label">Email o Gmail</label>
+            <label for="inputPassword3" class="col-sm-2 col-form-label"> <p class="formulario-nombre"> Email o Gmail</p></label>
             <div class="col-sm-10">
               <input type="email" class="form-control" id="inputEmail3">
             </div>
           </div>
           <div class="row mb-3">
-            <label for="inputPassword3" class="col-sm-2 col-form-label">Numero de telefono</label>
+            <label for="inputPassword3" class="col-sm-2 col-form-label"><p class="formulario-nombre">Numero de telefono</p></label>
             <div class="col-sm-10">
               <input type="name" class="form-control" id="inputName3">
             </div>
           </div>
           <fieldset class="row mb-3">
-            <legend class="col-form-label col-sm-2 pt-0">Por que medio nos vas a contactar? </legend>
+            <legend class="col-form-label col-sm-2 pt-0"><p class="formulario-nombre">Por que medio nos vas a contactar?</p> </legend>
             <div class="col-sm-10">
               <div class="form-check">
                 <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
@@ -117,18 +117,18 @@
 
         <section class="iconos">
             <div>
-                <a href="https://www.instagram.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt="" />
-                </a>
+              <a href="https://www.instagram.com/">
+                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt=""/>
+            </a>
 
-                <a href="https://www.facebook.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="" />
-                </a>
+            <a href="https://www.facebook.com/">
+                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="" />
+            </a>
 
-                <a href="https://web.whatsapp.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="" />
+            <a href="https://web.whatsapp.com/">
+                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="" />
 
-                </a>
+            </a>
 
 
             </div>
