--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -71,18 +71,18 @@
         <h3>Nuestras redes sociales</h3>
         <section>
             <div>
-                <a href="https://www.instagram.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png"  alt=""/>
-                </a>
+              <a href="https://www.instagram.com/">
+                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png" alt=""/>
+            </a>
 
-                <a href="https://www.facebook.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/facebook.png"  alt=""/>
-                </a>
+            <a href="https://www.facebook.com/">
+                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/facebook.png" alt="" />
+            </a>
 
-                <a href="https://web.whatsapp.com/">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt=""/>
+            <a href="https://web.whatsapp.com/">
+                <img class="redes-sociales" src="https://img.icons8.com/material-outlined/48/000000/whatsapp--v1.png" alt="" />
 
-                </a>
+            </a>
             </div>
         </section>
     </footer>
