correciones de imagenes y cambio de fuente de letra

--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -10,8 +10,11 @@
   <link rel="stylesheet" href="../estilos/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-  </style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
+    </style>
+     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+      </style>
   <title>Mateolis</title>
 </head>
 
@@ -64,7 +67,7 @@
 
       <h3 class="productos-comprar">MATES</h3>
       <div class="card" style="width: 18rem;">
-        <img src="../img/mates-1.jpg" class="card-img-top" alt="...">
+        <img src="../img/mates-1.webp" class="card-img-top" alt="seccion-productos">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-882281562-mate-de-vidrio-forrado-eco-cuero-de-animales-_JM#position=6&search_layout=grid&type=item&tracking_id=6adb1b1c-cd42-481d-acad-daad472ccffc"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -72,7 +75,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/mates-2.jpg" class="card-img-top" alt="...">
+        <img src="../img/mates-2.webp" class="card-img-top" alt="seccion-productos">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-1112221852-mate-uruguayo-torpedo-cuero-y-bombilla-pico-de-loro-_JM#position=51&search_layout=grid&type=item&tracking_id=716df2f5-af5b-488c-85ab-5057d2113b05"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -80,7 +83,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/mates-3.jpg" class="card-img-top" alt="...">
+        <img src="../img/mates-3.webp" class="card-img-top" alt="seccion-productos">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-880301865-mate-imperial-personalizado-boca-ancha-calabaza-gruesa-_JM#position=14&search_layout=grid&type=item&tracking_id=b26c371e-beeb-494b-8d1c-497dc2a3792d"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -90,7 +93,7 @@
 
       <h3 class="productos-comprar">BOMBILLAS</h3>
       <div class="card" style="width: 18rem;">
-        <img src="../img/bombilla-1.jpg" class="card-img-top" alt="...">
+        <img src="../img/bombilla-1.webp" class="card-img-top" alt="seccion-productos">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-918235995-bombilla-mate-pico-de-loro-acero-inoxidable-cuchara-paleta-_JM#position=6&search_layout=grid&type=item&tracking_id=d0e0c442-aaa9-482d-8579-84ae8cbc9d04"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -98,7 +101,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/bombilla-2.jpg" class="card-img-top" alt="...">
+        <img src="../img/bombilla-2.webp" class="card-img-top" alt="seccion-productos">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-929615358-bombilla-acero-inoxidable-pico-de-rey-_JM#position=48&search_layout=grid&type=item&tracking_id=d0e0c442-aaa9-482d-8579-84ae8cbc9d04"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -106,7 +109,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/bombilla-3.jpg" class="card-img-top" alt="...">
+        <img src="../img/bombilla-3.webp" class="card-img-top" alt="seccion-productos">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-1129823442-bombilla-para-mate-stanley-spoon-original-_JM#position=1&search_layout=grid&type=item&tracking_id=39712904-eb2d-4348-a734-7fdb0bc8149c"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -116,7 +119,7 @@
 
       <h3 class="productos-comprar">KIT DE MATES</h3>
       <div class="card" style="width: 18rem;">
-        <img src="../img/kit-de-mate-1.jpg" class="card-img-top" alt="...">
+        <img src="../img/kit-de-mate-1.webp" class="card-img-top" alt="seccion-productos">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-867693668-set-matero-kit-completo-equipo-mate-porta-termo-eco-cuero-_JM#position=2&search_layout=grid&type=item&tracking_id=d9e78cce-cc6e-4f00-a3df-c111b25b26cc"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -124,7 +127,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/kit-de-mate-2.jpg" class="card-img-top" alt="...">
+        <img src="../img/kit-de-mate-2.webp" class="card-img-top" alt="seccion-productos">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-920512527-set-equipo-mate-completo-pampa-termo-acero-bolso-y-bombilla-_JM?variation=90161168302#reco_item_pos=0&reco_backend=machinalis-seller-items-pdp&reco_backend_type=low_level&reco_client=vip-seller_items-above&reco_id=59c77bd2-1dbf-42b7-96b8-a25e445aa57c"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -132,7 +135,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/kit-de-mate-3.jpg" class="card-img-top" alt="...">
+        <img src="../img/kit-de-mate-3.webp" class="card-img-top" alt="seccion-productos">
         <div class="card-body">
           <a href="https://articulo.mercadolibre.com.ar/MLA-1142881959-kit-matero-stanley-termo-de-13ltrs-mate-bolso-_JM#position=14&search_layout=grid&type=item&tracking_id=2eb8b2ad-ac50-45e6-8c17-37dc7dfeef8c"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -141,7 +144,7 @@
 
       <h3 class="productos-comprar">TERMOS </h3>
       <div class="card" style="width: 18rem;">
-        <img src="../img/termo-1.jpg" class="card-img-top" alt="...">
+        <img src="../img/termo-1.webp" class="card-img-top" alt="seccion-productos">
         <div class="card-body">
           <a href="https://www.mercadolibre.com.ar/termo-waterdog-obus-de-acero-inoxidable-1l-black/p/MLA15508618?pdp_filters=category:MLA47769#searchVariation=MLA15508618&position=7&search_layout=stack&type=product&tracking_id=007fad4d-e1d1-4cca-8c81-a3e425ed2fd1"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -149,7 +152,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/termo-2.jpg" class="card-img-top" alt="...">
+        <img src="../img/termo-2.webp" class="card-img-top" alt="seccion-productos">
         <div class="card-body">
           <a href="https://www.mercadolibre.com.ar/stanley-termo-clasico-14-lts-con-tapon-cebador-de-acero-inoxidable-verde/p/MLA15542577?pdp_filters=category:MLA47769#searchVariation=MLA15542577&position=12&search_layout=stack&type=product&tracking_id=007fad4d-e1d1-4cca-8c81-a3e425ed2fd1"
             target="_blank" class="btn btn-primary">Comprar</a>
@@ -157,7 +160,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="../img/termo-3.jpg" class="card-img-top" alt="...">
+        <img src="../img/termo-3.webp" class="card-img-top" alt="seccion-productos">
         <div class="card-body">
           <a href="https://www.mercadolibre.com.ar/termo-termolar-r-evolution-rolha-dupla-de-acero-inoxidable-1l-acero/p/MLA9927395?pdp_filters=item_id:MLA1116304047#searchVariation=MLA9927395&position=8&search_layout=stack&type=pad&tracking_id=007fad4d-e1d1-4cca-8c81-a3e425ed2fd1"
             target="_blank" class="btn btn-primary">Comprar</a>
