--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -52,7 +52,7 @@
     <section class="nosotros-fondo">
         <h2 class="nosotros">Quienes somos?</h2>
         <div>
-            <p class="texto-nosotros"> <img src="../img/quienes-somos.jpg" alt="" class="img-nosotros"> Lorem ipsum dolor
+            <p class="texto-nosotros"> <img src="../img/quienes-somos.webp" alt="seccion-contacto" class="img-nosotros"> Lorem ipsum dolor
                 sit amet consectetur adipisicing elit. Totam, pariatur eaque!
                 Fugiat sit temporibus,
                 fuga alias doloribus beatae ut quis ullam eos ad velit, laborum voluptates quia recusandae possimus sunt
