cambios en responsive

--- a/secciones/tips-de-hacer-mates.html
+++ b/secciones/tips-de-hacer-mates.html
@@ -49,11 +49,13 @@
     </header>
 
     <section class="fondo-tips">
-    <section class="tips-titulo">
-        <h2>Los mejores tips para hacer un buen mate!!</h2>
+    <section class="titulo">
+      <div>
+        <h2 >Los mejores tips para hacer un buen mate!!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nulla expedita, atque veritatis pariatur fuga
             minus fugit nihil deleniti, a magnam dicta ducimus fugiat debitis, ullam modi dignissimos corporis. Ipsam!
         </p>
+      </div>
     </section>
 
 
